# WHUDR_Demo

./: .gitignore  CMakeLists.txt  README.md
Data/: armor.json  weapon.json
doc/vscode_template/: c_cpp_properties.json  launch.json  settings.json  tasks.json
savedata/: file_0.json
src/: main.cpp
src/Battle/: Battle.cpp  Battle.h  BattleActor.cpp  BattleActor.h  BattleEntity.h  BattleTypes.h  Bullet.cpp  Bullet.h  Calculus.cpp  Calculus.h  Enemy.cpp  Enemy.h  Soul.cpp  Soul.h
src/Game/: Database.cpp  Database.h  Game.cpp  Game.h  GlobalContext.h  SaveManager.cpp  SaveManager.h
src/Manager/: AudioManager.cpp  AudioManager.h  InputManager.cpp  InputManager.h
src/Overworld/: AlphysClass.cpp  AlphysClass.h  Interactable.h  Map.cpp  Map.h  NPC.h  OverworldCharacter.cpp  OverworldCharacter.h  Player.h  SecretRoom.cpp  SecretRoom.h
src/States/: BaseState.h  BattleState.cpp  BattleState.h  CutsceneState.h  OverworldState.cpp  OverworldState.h  TitleState.cpp  TitleState.h
src/UI/: BattleMenu.cpp  BattleMenu.h  DialogBox.cpp  DialogBox.h
